[package]
name = "llvm_stackmap"
license = "AGPL-3.0-only"
description = "A library capable of parsing stack maps emitted by the LLVM compiler."
version = "0.1.0"
authors = ["Nils Bars <nils.bars@rub.de>", "Moritz Schloegel <moritz.schloegel@rub.de>"]
edition = "2021"

[features]
default = ["serde-support", "from-elf"]

# Drive Serialize and Deserialize for all structures to support serde.
serde-support = ["serde"]
# Add support to create stackmap directly from an ELF file.
from-elf = ["goblin"]

[dependencies]
goblin = {version = "~0", optional = true}
serde = { version = "~1", features = ["derive"], optional = true}
rayon = "~1"
bytes = "~1"
